--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.5
   flutter_svg: ^2.0.2
+  fluttertoast: ^8.2.1
 
 dev_dependencies:
   flutter_test:
